--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/tinker": "^2.7",
         "openai-php/laravel": "^0.3.4",
         "openai/openai": "dev-main",
-        "spatie/laravel-permission": "^5.7"
+        "spatie/laravel-permission": "^5.7",
+        "spatie/laravel-sluggable": "^3.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
