--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,11 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "livewire/livewire": "^2.12",
+        "maatwebsite/excel": "^3.1",
         "openai-php/laravel": "^0.3.4",
         "openai/openai": "dev-main",
+        "paynow/php-sdk": "^1.0",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-permission": "*",
         "spatie/laravel-sluggable": "^3.5"
