--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "paynow/php-sdk": "^1.0",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-permission": "*",
-        "spatie/laravel-sluggable": "^3.5"
+        "spatie/laravel-sluggable": "^3.5",
+        "twilio/sdk": "^8.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
