OPT and Details update - Firebase

--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,13 @@
         "barryvdh/laravel-dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "infyomlabs/laravel-generator": "^5.4",
+        "kreait/firebase-php": "^7.16",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.12",
         "maatwebsite/excel": "^3.1",
+        "messagebird/php-rest-api": "^3.1",
         "openai-php/laravel": "^0.3.4",
         "openai/openai": "dev-main",
         "paynow/php-sdk": "^1.0",
